# fdaPDE-cpp

./: .Rhistory  .clang-format  .gitattributes  .gitignore  .gitmodules  DESCRIPTION  LICENSE.note  NAMESPACE  NEWS.md  README.md  mkdocs.yml
test/: BINOMIAL_SQUARE2D_test.R  CMakeLists.txt  EXPONENTIAL_Square_2D.R  ElementTest.cpp  FSPAITest.cpp  GAMMA_MESHC_2D.R  GAMMA_SPHERE_3D.R  GridOptimizerTest.cpp  IntegratorTest.cpp  IterativeOptimizerTest.cpp  LagrangianBasisTest.cpp  MainTest.cpp  MeshTest.cpp  NewtonOptimizerTest.cpp  OptimizerExtensionTest.cpp  POISSON_CIRCULAR_2D_test.R  POISSON_HUB_2_5_D_test.R  POISSON_MESH_C_2D_AREAL.R  README.md  SRPDETest.cpp  ScalarFieldTest.cpp  SearchEngineTest.cpp  VectorFieldTest.cpp  VectorSpaceTest.cpp  main.cpp  run_tests.sh  test.cpp  vignette_example.R
test/calibration/: GCVNewtonTest.cpp  GCVTest.cpp
test/core/: BilinearFormsTest.cpp  ElementTest.cpp  FSPAITest.cpp  IntegratorTest.cpp  KroneckerProductTest.cpp  LagrangianBasisTest.cpp  MeshTest.cpp  PDESolutionsTest.cpp  ScalarFieldTest.cpp  SearchEngineTest.cpp  SplineTest.cpp  VectorFieldTest.cpp  VectorSpaceTest.cpp
test/core/FEM/: IntegratorTest.cpp  LagrangianBasisTest.cpp  PDESolutionsTest.cpp
test/core/MESH/: ElementTest.cpp  MeshTest.cpp  SearchEngineTest.cpp
test/core/NLA/: VectorSpaceTest.cpp
test/data/: SRPDE_2Dnocov.csv  SRPDE_2Dnocov_data.csv  ex33-fspai.mtx  ex33.mtx  m1.5D_neigh.csv  m2.5D_boundary.csv  m2.5D_edges.csv  m2.5D_neigh.csv  m2D_edges.csv  m2D_elements.csv  m3D_boundary.csv  m3D_edges.csv  m3D_elements.csv  m3D_neigh.csv  m3D_points.csv  msc01440-fspai.mtx  square_edges.csv  square_elements.csv  square_points.csv
test/data/PDEs/: FEMorder2_reference_solution.mtx
test/data/mesh/c_shaped/: boundary.csv  edges.csv  elements.csv  neigh.csv  points.csv
test/data/mesh/c_shaped_adj/: boundary.csv  edges.csv  elements.csv  neigh.csv  points.csv
test/data/mesh/c_shaped_areal/: boundary.csv  edges.csv  elements.csv  neigh.csv  points.csv
test/data/mesh/c_shaped_surface/: boundary.csv  edges.csv  elements.csv  neigh.csv  points.csv
test/data/mesh/network/: boundary.csv  edges.csv  elements.csv  neigh.csv  points.csv
test/data/mesh/quasi_circle/: boundary.csv  edges.csv  elements.csv  neigh.csv  points.csv
test/data/mesh/surface/: elements.csv  points.csv
test/data/mesh/unit_circle/: boundary.csv  neigh.csv  (+1 more)
test/data/misc/: P0.mtx  Phi.mtx  Pt.mtx  spline.mtx  spline_der.mtx
test/models/: FPCATest.cpp  GSRPDETest.cpp  SRPDETest.cpp  STRPDETest.cpp  SpaceTimeTest.cpp
test/src/: FPCATest.cpp  GSRPDETest.cpp  SRPDETest.cpp  STRPDETest.cpp  case_study.cpp  centering_test.cpp  fpca_test.cpp  fpls_test.cpp  functional_centering_test.cpp  gcv_mqsrpde_test.cpp  gcv_msqrpde_test.cpp  gcv_qsrpde_test.cpp  gcv_qstrpde_test.cpp  gcv_sqrpde_test.cpp  gcv_sqrpde_time_test.cpp  gcv_srpde_newton_test.cpp  gcv_srpde_test.cpp  gcv_stqrpde_test.cpp  gcv_test.cpp  gsrpde_test.cpp  kcv_srpde_test.cpp  mqsrpde_test.cpp  msqrpde_test.cpp  qsrpde_test.cpp  qstrpde_test.cpp  sqrpde_test.cpp  sqrpde_time_test.cpp  srpde_test.cpp  stqrpde_test.cpp  strpde_test.cpp
test/src/utils/: constants.h  mesh_loader.h  utils.h
test/utils/: Constants.h  MeshLoader.h  Utils.h
(+921 files in other folders)
